# suostei

./: README.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/audios/: page.tsx
client/src/app/components/: Card.tsx  Navbar.tsx
client/src/app/context/: useAuth.tsx
client/src/app/writer/: layout.tsx  page.tsx
client/src/components/: Modal.tsx
client/src/editor/: Setting.tsx
client/src/editor/context/: SettingsContext.tsx  SharedAutocompleteContext.tsx  SharedHistoryContext.tsx
client/src/editor/nodes/: AutocompleteNode.tsx  EmojiNode.tsx  EquationComponent.tsx  EquationNode.tsx  FigmaNode.tsx  ImageComponent.tsx  ImageNode.tsx  InlineImageComponent.tsx  InlineImageNode.tsx  PollComponent.tsx  PollNode.tsx  StickyComponent.tsx  StickyNode.tsx  TweetNode.tsx  YouTubeNode.tsx
client/src/editor/plugins/: TablePlugin.tsx
client/src/icons/: HeartIcon.tsx  NextIcon.tsx  PauseCircleIcon.tsx  PreviousIcon.tsx  RepeatOneIcon.tsx  ShuffleIcon.tsx
server/: Cargo.toml
server/src/: config.rs  db.rs  main.rs  routes.rs
server/src/context/: mod.rs  token.rs
server/src/contexts/: mod.rs  token.rs
server/src/graphql/: mod.rs
server/src/graphql/private/: mod.rs
server/src/graphql/private/mutations/: blog.rs  mod.rs
server/src/graphql/private/queries/: blog.rs  mod.rs
server/src/graphql/private/subscriptions/: mod.rs
server/src/models/: blog.rs  category.rs  mod.rs  role.rs  tag.rs  user.rs
server/src/security/: github_oauth.rs  google_oauth.rs  handler.rs  mod.rs  response.rs
(+58 files in other folders)
